force-app/main/default/objects/Internal_Engagement_Team__c/Internal_Engagement_Team__c.object-meta.xml
<CustomObject>
    <label>Internal Engagement Team</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Engagement Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Engagement Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>