force-app/main/default/objects/Internal_Engagement_Team__c/fields/Associated_Office__c.field-meta.xml
<CustomField>
    <fullName>Associated_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Affiliate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal Engagement Teams</relationshipLabel>
    <relationshipName>Internal_Engagement_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>